# hpo-ptbr-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-semantic.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/demo/: synthetic_descriptions.json  synthetic_review_cases.json
data/eval/: holdout_cases.csv  holdout_manifest.json  holdout_review.csv  pilot_cases.csv
data/processed/: hpo_exact_synonyms_en.csv  hpo_exact_synonyms_en_metadata.json  hpo_ptbr.csv  metadata.json  untranslated_terms.csv
data/protocol/: mention_detection_protocol.json
data/results/: comparison_metrics.csv  comparison_report.md  development_experiment1_details.csv  development_experiment1_metadata.json  (+42 more)
docs/: mention_detection_protocol.md
notebooks/: 01_hpo_pt_coverage.executed.ipynb  01_hpo_pt_coverage.ipynb
scripts/: benchmark_evidence.py  build_aliases.py  build_comparison_report.py  build_snapshot.py  check_dashboard_readiness.py  create_notebook.py  evaluate_evidence.py  freeze_holdout.py  prepare_holdout_review.py  replace_rejected_holdout.py  run_evaluation.py  run_experiment1.py  run_semantic_evaluation.py  run_semantic_evidence_experiment.py
tests/: test_aliases.py  test_deployment.py  test_evidence.py  test_evidence_evaluation.py  test_experiment.py  test_hybrid.py  test_hybrid_evidence.py  test_mention_evaluation.py  test_normalize.py  test_protocol.py  test_rankers.py  test_reporting.py  test_review.py  test_sapbert.py  test_semantic_evidence.py  test_snapshot.py
(+21 files in other folders)
