[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hpo-ptbr-lab"
version = "0.1.0"
description = "Protótipo reproduzível para recuperação de termos HPO em português brasileiro"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0,<3",
  "rapidfuzz>=3.0,<4",
  "rank-bm25>=0.2.2,<1",
  "streamlit>=1.40,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
